// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facility should render a Facility 1`] = `
<Fragment>
  <Card
    body={false}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
  >
    <CardHeader>
      <strong>
        Facility Name: 
      </strong>
      f
    </CardHeader>
    <ListGroup
      className="list-group-flush"
      variant={null}
    >
      <ListGroupItem
        active={false}
        disabled={false}
        variant={null}
      >
        <strong>
          Address: 
        </strong>
         
        <br />
        123
         
        123abc
        <br />
        Vic
        , 
        BC
      </ListGroupItem>
      <ListGroupItem
        active={false}
        disabled={false}
        variant={null}
      >
        <strong>
          Application Status:
        </strong>
          
         
        <Badge
          pill={true}
          variant="info"
        >
          pending
        </Badge>
      </ListGroupItem>
    </ListGroup>
    <CardBody>
      <Link
        href={
          Object {
            "pathname": "/view-application",
            "query": Object {
              "applicationId": "id",
            },
          }
        }
      >
        <Button
          active={false}
          data-action="view"
          disabled={false}
          type="button"
          variant="primary"
        >
          View Submitted Application
        </Button>
      </Link>
    </CardBody>
  </Card>
</Fragment>
`;

exports[`Facility should render a Resume Application button if an applicationID exists && has a draft status 1`] = `
<Fragment>
  <Card
    body={false}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
  >
    <CardHeader>
      <strong>
        Facility Name: 
      </strong>
      f
    </CardHeader>
    <ListGroup
      className="list-group-flush"
      variant={null}
    >
      <ListGroupItem
        active={false}
        disabled={false}
        variant={null}
      >
        <strong>
          Address: 
        </strong>
         
        <br />
        123
         
        123abc
        <br />
        Vic
        , 
        BC
      </ListGroupItem>
      <ListGroupItem
        active={false}
        disabled={false}
        variant={null}
      >
        <strong>
          Application Status:
        </strong>
          
         
        <Badge
          pill={true}
          variant="dark"
        >
          draft
        </Badge>
      </ListGroupItem>
    </ListGroup>
    <CardBody>
      <Link
        href={
          Object {
            "pathname": "/ciip-application",
            "query": Object {
              "applicationId": "id",
            },
          }
        }
      >
        <Button
          active={false}
          data-action="resume"
          disabled={false}
          type="button"
          variant="primary"
        >
          Resume CIIP application
        </Button>
      </Link>
    </CardBody>
  </Card>
</Fragment>
`;

exports[`Facility should render a View Submitted App button if an applicationID exists and is not in draft status 1`] = `
<Fragment>
  <Card
    body={false}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
  >
    <CardHeader>
      <strong>
        Facility Name: 
      </strong>
      f
    </CardHeader>
    <ListGroup
      className="list-group-flush"
      variant={null}
    >
      <ListGroupItem
        active={false}
        disabled={false}
        variant={null}
      >
        <strong>
          Address: 
        </strong>
         
        <br />
        123
         
        123abc
        <br />
        Vic
        , 
        BC
      </ListGroupItem>
      <ListGroupItem
        active={false}
        disabled={false}
        variant={null}
      >
        <strong>
          Application Status:
        </strong>
          
         
        <Badge
          pill={true}
          variant="info"
        >
          pending
        </Badge>
      </ListGroupItem>
    </ListGroup>
    <CardBody>
      <Link
        href={
          Object {
            "pathname": "/view-application",
            "query": Object {
              "applicationId": "id",
            },
          }
        }
      >
        <Button
          active={false}
          data-action="view"
          disabled={false}
          type="button"
          variant="primary"
        >
          View Submitted Application
        </Button>
      </Link>
    </CardBody>
  </Card>
</Fragment>
`;

exports[`Facility should render an Apply For CIIP button if no applicationID exists 1`] = `
<Fragment>
  <Card
    body={false}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
  >
    <CardHeader>
      <strong>
        Facility Name: 
      </strong>
      f
    </CardHeader>
    <ListGroup
      className="list-group-flush"
      variant={null}
    >
      <ListGroupItem
        active={false}
        disabled={false}
        variant={null}
      >
        <strong>
          Address: 
        </strong>
         
        <br />
        123
         
        123abc
        <br />
        Vic
        , 
        BC
      </ListGroupItem>
      <ListGroupItem
        active={false}
        disabled={false}
        variant={null}
      >
        <strong>
          Application Status:
        </strong>
          
         
        Application not started
      </ListGroupItem>
    </ListGroup>
    <CardBody>
      <Button
        active={false}
        data-action="apply"
        disabled={false}
        onClick={[Function]}
        type="button"
        variant="primary"
      >
        Apply for CIIP for this facility
      </Button>
    </CardBody>
  </Card>
</Fragment>
`;
